[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Scene Objects/Exit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player/ModulePlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Tilesets/beach_tiles.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/Level/LockedExitLevelScript.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Enemy/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Scene Objects/Key.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Scene Objects/Lever.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Scene Objects/KeyLockedExit.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Scene Objects/Torch.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Enemy/EnemyDragoon.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Enemy/EnemyShambler.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Enemy/EnemyPomudachi.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Enemy/EnemyProwler.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Scene Objects/ExitRoomDoor.tscn" type="PackedScene" id=14]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( -23, 0, 11, -22, 0, 131088, -21, 0, 131091, -20, 0, 131092, -19, 0, 14, 65513, 0, 65547, 65514, 0, 131084, 65515, 0, 131084, 65516, 0, 131084, 65517, 0, 131086, 131040, 0, 11, 131041, 0, 131092, 131042, 0, 131090, 131043, 0, 131092, 131044, 0, 13, 131045, 0, 131093, 131046, 0, 131094, 131047, 0, 131089, 131048, 0, 13, 131049, 0, 65544, 131050, 0, 131084, 131051, 0, 131084, 131052, 0, 131084, 131053, 0, 65545, 131054, 0, 13, 131055, 0, 131093, 131056, 0, 131094, 131057, 0, 131091, 131058, 0, 131092, 131059, 0, 131091, 131060, 0, 131088, 131061, 0, 131090, 131062, 0, 131088, 131063, 0, 131091, 131064, 0, 13, 131065, 0, 131091, 131066, 0, 131091, 131067, 0, 13, 131068, 0, 13, 131069, 0, 131088, 131070, 0, 131090, 131071, 0, 131088, 65536, 0, 14, 196576, 0, 65547, 196577, 0, 131084, 196578, 0, 131084, 196579, 0, 131084, 196580, 0, 131084, 196581, 0, 131084, 196582, 0, 131084, 196583, 0, 131084, 196584, 0, 131084, 196585, 0, 131084, 196586, 0, 131084, 196587, 0, 131084, 196588, 0, 131084, 196589, 0, 131084, 196590, 0, 131084, 196591, 0, 131084, 196592, 0, 131084, 196593, 0, 131084, 196594, 0, 131084, 196595, 0, 131084, 196596, 0, 131084, 196597, 0, 131084, 196598, 0, 131084, 196599, 0, 131084, 196600, 0, 131084, 196601, 0, 131084, 196602, 0, 131084, 196603, 0, 131084, 196604, 0, 131084, 196605, 0, 131084, 196606, 0, 131084, 196607, 0, 131084, 131072, 0, 131086, 262112, 0, 65547, 262113, 0, 131084, 262114, 0, 131081, 262115, 0, 65557, 262116, 0, 65556, 262117, 0, 65552, 262118, 0, 65554, 262119, 0, 65557, 262120, 0, 65555, 262121, 0, 65556, 262122, 0, 65553, 262123, 0, 65553, 262124, 0, 65552, 262125, 0, 65551, 262126, 0, 65558, 262127, 0, 65555, 262128, 0, 65559, 262129, 0, 65552, 262130, 0, 65558, 262131, 0, 65554, 262132, 0, 65555, 262133, 0, 65558, 262134, 0, 65554, 262135, 0, 65554, 262136, 0, 65558, 262137, 0, 196620, 262138, 0, 65554, 262139, 0, 65558, 262140, 0, 65556, 262141, 0, 65555, 262142, 0, 131080, 262143, 0, 131084, 196608, 0, 131086, 327648, 0, 65547, 327649, 0, 131084, 327650, 0, 131086, 327661, 2, 0, 327678, 0, 65547, 327679, 0, 131084, 262144, 0, 131086, 393184, 0, 65547, 393185, 0, 131084, 393186, 0, 131086, 393214, 0, 65547, 393215, 0, 131084, 327680, 0, 131086, 458720, 0, 65547, 458721, 0, 131084, 458722, 0, 131086, 458750, 0, 65547, 458751, 0, 131084, 393216, 0, 131086, 524256, 0, 65547, 524257, 0, 131084, 524258, 0, 131086, 524259, 1, 196609, 524260, 1, 131074, 524261, 1, 196610, 524262, 1, 131073, 524263, 1, 131073, 524264, 1, 131075, 524265, 1, 131072, 524266, 1, 196612, 524267, 1, 1, 524268, 1, 65536, 524269, 1, 4, 524270, 1, 2, 524271, 1, 65540, 524272, 1, 2, 524273, 1, 65538, 524274, 1, 3, 524275, 1, 65537, 524276, 1, 196612, 524277, 1, 1, 524278, 1, 131073, 524279, 1, 196611, 524280, 1, 65538, 524281, 1, 131075, 524282, 1, 4, 524283, 1, 0, 524284, 1, 2, 524285, 1, 65538, 524286, 0, 65547, 524287, 0, 131084, 458752, 0, 131086, 589792, 0, 65547, 589793, 0, 131084, 589794, 0, 131086, 589795, 1, 131072, 589796, 1, 131073, 589797, 1, 0, 589798, 1, 0, 589799, 1, 131073, 589800, 1, 131076, 589801, 1, 131075, 589802, 1, 3, 589803, 1, 0, 589804, 1, 3, 589805, 1, 196612, 589806, 1, 131075, 589807, 1, 131072, 589808, 1, 2, 589809, 1, 196612, 589810, 1, 3, 589811, 1, 131074, 589812, 1, 131073, 589813, 1, 1, 589814, 1, 4, 589815, 1, 65536, 589816, 1, 2, 589817, 1, 196608, 589818, 1, 131073, 589819, 1, 131076, 589820, 1, 131073, 589821, 1, 3, 589822, 0, 65547, 589823, 0, 131084, 524288, 0, 131086, 655328, 0, 65547, 655329, 0, 131084, 655330, 0, 131086, 655331, 1, 3, 655332, 1, 131074, 655333, 1, 0, 655334, 1, 65538, 655335, 1, 196608, 655336, 1, 0, 655337, 1, 0, 655338, 1, 0, 655339, 1, 0, 655340, 1, 131075, 655341, 1, 0, 655342, 1, 0, 655343, 1, 0, 655344, 1, 0, 655345, 1, 0, 655346, 1, 0, 655347, 1, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 1, 655351, 1, 196612, 655352, 1, 1, 655353, 1, 3, 655354, 1, 131073, 655355, 1, 4, 655356, 1, 131074, 655357, 1, 196608, 655358, 0, 65547, 655359, 0, 131084, 589824, 0, 131086, 720864, 0, 65547, 720865, 0, 131084, 720866, 0, 131086, 720867, 1, 65536, 720868, 1, 2, 720869, 1, 0, 720870, 1, 1, 720871, 1, 65537, 720872, 1, 196611, 720873, 1, 196611, 720874, 1, 65539, 720875, 1, 0, 720876, 1, 65539, 720877, 1, 131073, 720878, 1, 65540, 720879, 1, 131072, 720880, 1, 196608, 720881, 1, 131074, 720882, 1, 196610, 720883, 1, 4, 720884, 1, 0, 720885, 1, 0, 720886, 1, 0, 720887, 1, 65538, 720888, 1, 65536, 720889, 1, 3, 720890, 1, 196610, 720891, 1, 131073, 720892, 1, 196608, 720893, 1, 196610, 720894, 0, 65547, 720895, 0, 131084, 655360, 0, 131086, 786400, 0, 65547, 786401, 0, 131084, 786402, 0, 131086, 786403, 1, 131074, 786404, 1, 4, 786405, 1, 0, 786406, 1, 2, 786407, 1, 4, 786408, 1, 196610, 786409, 1, 196608, 786410, 1, 0, 786411, 1, 1, 786412, 1, 196608, 786413, 1, 131076, 786414, 1, 196612, 786415, 1, 65540, 786416, 1, 65540, 786417, 1, 4, 786418, 1, 3, 786419, 1, 131075, 786420, 1, 131075, 786421, 1, 0, 786422, 1, 131075, 786423, 1, 0, 786424, 1, 65540, 786425, 1, 196609, 786426, 1, 131075, 786427, 1, 131072, 786428, 1, 131074, 786429, 1, 1, 786430, 0, 65547, 786431, 0, 131084, 720896, 0, 131086, 851936, 0, 65547, 851937, 0, 131084, 851938, 0, 131086, 851939, 1, 131075, 851940, 1, 131075, 851941, 1, 4, 851942, 1, 0, 851943, 1, 196612, 851944, 1, 131072, 851945, 1, 1, 851946, 1, 131074, 851947, 1, 131076, 851948, 1, 131076, 851949, 1, 196612, 851950, 1, 65536, 851951, 1, 131075, 851952, 1, 0, 851953, 1, 131074, 851954, 1, 65538, 851955, 1, 0, 851956, 1, 196609, 851957, 1, 2, 851958, 1, 196610, 851959, 1, 196609, 851960, 1, 65537, 851961, 1, 196612, 851962, 1, 196612, 851963, 1, 131072, 851964, 1, 196609, 851965, 1, 131076, 851966, 0, 65547, 851967, 0, 131084, 786432, 0, 131086, 917472, 0, 65547, 917473, 0, 131084, 917474, 0, 131086, 917475, 1, 65536, 917476, 1, 65540, 917477, 1, 196608, 917478, 1, 196611, 917479, 1, 0, 917480, 1, 131073, 917481, 1, 0, 917482, 1, 65537, 917483, 1, 196610, 917484, 1, 131075, 917485, 1, 0, 917486, 1, 0, 917487, 1, 196609, 917488, 1, 0, 917489, 1, 196609, 917490, 1, 65540, 917491, 1, 65539, 917492, 1, 196612, 917493, 1, 196612, 917494, 1, 3, 917495, 1, 4, 917496, 1, 196611, 917497, 1, 65539, 917498, 1, 65537, 917499, 1, 65537, 917500, 1, 2, 917501, 1, 196611, 917502, 0, 65547, 917503, 0, 131084, 851968, 0, 131086, 983008, 0, 65547, 983009, 0, 131084, 983010, 0, 131086, 983011, 1, 196611, 983012, 1, 196611, 983013, 1, 131076, 983014, 1, 65538, 983015, 1, 1, 983016, 1, 131075, 983017, 1, 131072, 983018, 1, 131073, 983019, 1, 131073, 983020, 1, 196608, 983021, 1, 2, 983022, 1, 196611, 983023, 1, 196609, 983024, 1, 196611, 983025, 1, 196609, 983026, 1, 65540, 983027, 1, 4, 983028, 1, 0, 983029, 1, 0, 983030, 1, 131072, 983031, 1, 196608, 983032, 1, 4, 983033, 1, 65540, 983034, 1, 65536, 983035, 1, 1, 983036, 1, 196612, 983037, 1, 131074, 983038, 0, 65547, 983039, 0, 131084, 917504, 0, 131086, 1048544, 0, 65547, 1048545, 0, 131084, 1048546, 0, 131086, 1048547, 1, 131074, 1048548, 1, 131072, 1048549, 1, 0, 1048550, 1, 131072, 1048551, 1, 131075, 1048552, 1, 4, 1048553, 1, 0, 1048554, 1, 131076, 1048555, 1, 65539, 1048556, 1, 65540, 1048557, 1, 131074, 1048558, 1, 196610, 1048559, 1, 131075, 1048560, 1, 131072, 1048561, 1, 4, 1048562, 1, 65536, 1048563, 1, 131075, 1048564, 1, 0, 1048565, 1, 0, 1048566, 1, 196611, 1048567, 1, 0, 1048568, 1, 1, 1048569, 1, 196610, 1048570, 1, 2, 1048571, 1, 131075, 1048572, 1, 1, 1048573, 1, 196609, 1048574, 0, 65547, 1048575, 0, 131084, 983040, 0, 131086, 1114080, 0, 65547, 1114081, 0, 131084, 1114082, 0, 131086, 1114083, 1, 65538, 1114084, 1, 1, 1114085, 1, 0, 1114086, 1, 0, 1114087, 1, 0, 1114088, 1, 0, 1114089, 1, 0, 1114090, 1, 131076, 1114091, 1, 0, 1114092, 1, 65539, 1114093, 1, 0, 1114094, 1, 0, 1114095, 1, 131074, 1114096, 1, 65538, 1114097, 1, 0, 1114098, 1, 0, 1114099, 1, 196612, 1114100, 1, 0, 1114101, 1, 0, 1114102, 1, 196608, 1114103, 1, 131072, 1114104, 1, 196608, 1114105, 1, 196610, 1114106, 1, 196608, 1114107, 1, 65540, 1114108, 1, 131074, 1114109, 1, 1, 1114110, 0, 65547, 1114111, 0, 131084, 1048576, 0, 131086, 1179616, 0, 65547, 1179617, 0, 131084, 1179618, 0, 131086, 1179619, 1, 131072, 1179620, 1, 2, 1179621, 1, 0, 1179622, 1, 0, 1179623, 1, 0, 1179624, 1, 0, 1179625, 1, 0, 1179626, 1, 196609, 1179627, 1, 131073, 1179628, 1, 0, 1179629, 1, 196609, 1179630, 1, 65538, 1179631, 1, 65538, 1179632, 1, 131073, 1179633, 1, 65539, 1179634, 1, 196610, 1179635, 1, 0, 1179636, 1, 0, 1179637, 1, 0, 1179638, 1, 196612, 1179639, 1, 196608, 1179640, 1, 65538, 1179641, 1, 131075, 1179642, 1, 196610, 1179643, 1, 131073, 1179644, 1, 131073, 1179645, 1, 1, 1179646, 0, 65547, 1179647, 0, 131084, 1114112, 0, 131086, 1245152, 0, 65547, 1245153, 0, 131084, 1245154, 0, 65545, 1245155, 0, 131094, 1245156, 0, 131091, 1245157, 0, 131090, 1245158, 0, 131088, 1245159, 0, 131090, 1245160, 0, 131090, 1245161, 0, 131091, 1245162, 0, 13, 1245163, 0, 131092, 1245164, 0, 131088, 1245165, 0, 131087, 1245166, 0, 131094, 1245167, 0, 131091, 1245168, 0, 131089, 1245169, 0, 13, 1245170, 0, 131094, 1245171, 0, 131092, 1245172, 0, 131091, 1245173, 0, 131091, 1245174, 0, 131091, 1245175, 0, 131090, 1245176, 0, 131089, 1245177, 0, 131090, 1245178, 0, 13, 1245179, 0, 131089, 1245180, 0, 131090, 1245181, 0, 131090, 1245182, 0, 65544, 1245183, 0, 131084, 1179648, 0, 131086, 1310688, 0, 65547, 1310689, 0, 131084, 1310690, 0, 131084, 1310691, 0, 131084, 1310692, 0, 131084, 1310693, 0, 131084, 1310694, 0, 131084, 1310695, 0, 131084, 1310696, 0, 131084, 1310697, 0, 131084, 1310698, 0, 131084, 1310699, 0, 131084, 1310700, 0, 131084, 1310701, 0, 131084, 1310702, 0, 131084, 1310703, 0, 131084, 1310704, 0, 131084, 1310705, 0, 131084, 1310706, 0, 131084, 1310707, 0, 131084, 1310708, 0, 131084, 1310709, 0, 131084, 1310710, 0, 131084, 1310711, 0, 131084, 1310712, 0, 131084, 1310713, 0, 131084, 1310714, 0, 131084, 1310715, 0, 131084, 1310716, 0, 131084, 1310717, 0, 131084, 1310718, 0, 131084, 1310719, 0, 131084, 1245184, 0, 131086, 1376224, 0, 196619, 1376225, 0, 65559, 1376226, 0, 65551, 1376227, 0, 65554, 1376228, 0, 65556, 1376229, 0, 65555, 1376230, 0, 65551, 1376231, 0, 65552, 1376232, 0, 65557, 1376233, 0, 65555, 1376234, 0, 65555, 1376235, 0, 65551, 1376236, 0, 65559, 1376237, 0, 65551, 1376238, 0, 65551, 1376239, 0, 65554, 1376240, 0, 65559, 1376241, 0, 65555, 1376242, 0, 65551, 1376243, 0, 65555, 1376244, 0, 65553, 1376245, 0, 65551, 1376246, 0, 65552, 1376247, 0, 65552, 1376248, 0, 65553, 1376249, 0, 65558, 1376250, 0, 65559, 1376251, 0, 65552, 1376252, 0, 65551, 1376253, 0, 196620, 1376254, 0, 65552, 1376255, 0, 65551, 1310720, 0, 196622 )

[node name="Objects" type="Node2D" parent="."]
position = Vector2( 0, 8 )

[node name="Exit" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( -211, 494 )

[node name="ExitDoor" parent="Objects" instance=ExtResource( 14 )]
position = Vector2( -959, 569 )

[node name="ModulePlayer" parent="Objects" instance=ExtResource( 2 )]
position = Vector2( -1203, 809 )

[node name="Enemy" parent="Objects/ModulePlayer" instance=ExtResource( 10 )]
position = Vector2( 645, -158 )

[node name="Enemy2" parent="Objects/ModulePlayer" instance=ExtResource( 12 )]
position = Vector2( 680, 178 )

[node name="Prowler" parent="Objects/ModulePlayer" instance=ExtResource( 13 )]
position = Vector2( 835, -158 )

[node name="Shambler" parent="Objects/ModulePlayer" instance=ExtResource( 11 )]
position = Vector2( 866, 47 )

[node name="Enemy" parent="Objects" groups=["enemy"] instance=ExtResource( 5 )]
position = Vector2( -611, 791 )

[node name="Key" parent="Objects" instance=ExtResource( 6 )]
position = Vector2( -505, 542 )

[node name="Lever" parent="Objects" instance=ExtResource( 7 )]
position = Vector2( -322, 519 )

[node name="KeyLockedExit" parent="Objects" instance=ExtResource( 8 )]
position = Vector2( -256, 1008 )

[node name="Torch" parent="." instance=ExtResource( 9 )]
position = Vector2( -1803, 798 )

[node name="Node" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="Node"]

[connection signal="key_randomPos" from="." to="Objects/Key" method="_on_Node2D_key_randomPos"]
[connection signal="leaving_level" from="Objects/ExitDoor" to="." method="_on_ExitDoor_leaving_level"]
[connection signal="door_stuck" from="Objects/ModulePlayer" to="Objects/KeyLockedExit" method="_on_ModulePlayer_door_stuck"]
[connection signal="key_used" from="Objects/ModulePlayer" to="Objects/KeyLockedExit" method="_on_ModulePlayer_key_used"]
[connection signal="key_acquired" from="Objects/Key" to="Objects/ModulePlayer" method="_on_Key_key_acquired"]
[connection signal="body_entered" from="Objects/Lever" to="Objects/Lever" method="_on_Lever_body_entered"]
[connection signal="body_exited" from="Objects/Lever" to="Objects/Lever" method="_on_Lever_body_exited"]
[connection signal="lever_set" from="Objects/Lever" to="." method="_on_Lever_lever_set"]
[connection signal="body_exited" from="Objects/KeyLockedExit" to="Objects/KeyLockedExit" method="_on_KeyLockedExit_body_exited"]
[connection signal="key_checked" from="Objects/KeyLockedExit" to="Objects/ModulePlayer" method="_on_KeyLockedExit_key_checked"]
